minimal design complete

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -53,3 +53,11 @@ a:hover {
     transform: translateX(2px);
   }
 }
+
+  .drop-shadow {
+    filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.2));
+  }
+
+  .drop-shadow2 {
+    filter: drop-shadow(0.1rem 0.3rem 0.4rem rgba(0, 0, 0, 0.2));
+  }
