added resume and polished website

--- a/src/style/base/_typography.scss
+++ b/src/style/base/_typography.scss
@@ -54,8 +54,8 @@ a:hover {
   }
 }
 
-  .drop-shadow {
-    filter: drop-shadow(0 0.4rem 0.4rem rgba(0, 0, 0, 0.2));
+  h1 {
+    filter: drop-shadow(0.1rem 0.3rem 0.4rem rgba(0, 0, 0, 0.2));
   }
 
   .drop-shadow2 {
