--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,5 @@
-// COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #7ed6df;
+$secondary-color: #21a2ad;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
