--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,16 +1,13 @@
 $primary-color: #7ed6df;
 $secondary-color: #21a2ad;
 
-// $primary-color: #7f449d;
-// $secondary-color: #793fc1;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #272341; 
 
-// FONT SIZE
 $default-font-size: 1.6rem;
 $big-font-size: 4rem;
 $mid-font-size: 2.5rem;
